--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
 js thumbnail
-bez shell scripts
-ładny wygląd
-usuwanie incronem
-struktura katalogow
-inne pliki
+no shell scripts
+nice looks
+incron image deletion
+directory structure
+other files
 ruby inotify
+search
