--- a/README.textile
+++ b/README.textile
@@ -15,5 +15,5 @@ h2. Installation
 
 Create a file in /etc/incron.d/ directory and add following lines to it:
 
-@/your/images/dir/ IN_CREATE,IN_MOVED_TO /where/this/app/is/script/create.sh $#@
-@/your/images/dir/ IN_DELETE,IN_MOVED_FROM /where/this/app/is/script/delete.sh $#@
+@/your/images/dir/ IN_CREATE,IN_MOVED_TO /where/this/app/is/script/create.sh $#
+/your/images/dir/ IN_DELETE,IN_MOVED_FROM /where/this/app/is/script/delete.sh $#@
