--- a/README.textile
+++ b/README.textile
@@ -17,3 +17,5 @@ Create a file in /etc/incron.d/ directory and add following lines to it:
 
 @/your/images/dir/ IN_CREATE,IN_MOVED_TO /where/this/app/is/script/create.sh $#@
 @/your/images/dir/ IN_DELETE,IN_MOVED_FROM /where/this/app/is/script/delete.sh $#@
+
+And temporary you have to set images_path variable in app/model/image.rb
