--- a/README.textile
+++ b/README.textile
@@ -1,10 +1,10 @@
 h1. Imgur-Directory-Listing
 
-This is a directory listing app for people with slow upload speeds. Each image in the images directory is uploaded to [imgur.com](imgur.com) and each link on the site redirects users to [imgur.com](http://imgur.com).
+This is a directory listing app for people with slow upload speeds. Each image in the images directory is uploaded to "imgur.com":imgur.com and each link on the site redirects users to "imgur.com":http://imgur.com.
 
 h1. How does it work?
 
-It's using incron, to add an image to the database (and to [imgur.com](http://imgur.com)), each time it's added to the images directory. 
+It's using incron, to add an image to the database (and to "imgur.com":http://imgur.com), each time it's added to the images directory. 
 
 h2. Requirements
 * incron installed
