--- a/README.textile
+++ b/README.textile
@@ -9,14 +9,15 @@ It's using incron, to add an image to the database (and to "imgur.com":http://im
 h2. Requirements
 * incron installed
 * imgur gem installed
+@gem install imgur@
 * mime-types gem installed
+@gem install mime-types@
 
 h2. Installation
 
 Create a file in /etc/incron.d/ directory and add following lines to it:
 
-bc. 
-/your/images/dir/ IN_CREATE,IN_MOVED_TO /where/this/app/is/script/create.sh $#
+bc. /your/images/dir/ IN_CREATE,IN_MOVED_TO /where/this/app/is/script/create.sh $#
 /your/images/dir/ IN_DELETE,IN_MOVED_FROM /where/this/app/is/script/delete.sh $#
 
 p. 
