--- a/README.textile
+++ b/README.textile
@@ -17,6 +17,6 @@ h2. Installation
 
 Create a file in /etc/incron.d/ directory and add following lines to it:
 
-bc. /home/alistra/images/public/images/ IN_CREATE,IN_DELETE,IN_MOVED_FROM,IN_MOVED_TO rake --rakefile=/path/to/rails/app/libs/tasks/startup.rake
+bc. /image/dir IN_CREATE,IN_MOVED_TO,IN_MOVED_FROM,IN_DELETE /path/to/app/script/readdir $#
 
 p. And temporary you have to set images_path variable in app/model/image.rb
